--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header box">
       <!--навигация по страницам-->
       <div class="container header-container">
         <nav class="navigation">
@@ -58,7 +58,10 @@
       <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
           <button class="modal-btn" type="button">Заказать услугу</button>
         </div>
       </section>
@@ -99,100 +102,112 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="work">
-        <h2 class="work-title">Чем мы занимаемся</h2>
-        <ul class="work-list list">
-          <li class="work-item">
-            <img
-              src="./images/work/code.jpg"
-              alt="написание кода за рабочим столом"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/work/mobile.jpg"
-              alt="шаблоны сайта на мобильных телефонах"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/work/circle.jpg"
-              alt="цветовой круг ввиде сот на планшете"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+      <section class="work section">
+        <div class="container">
+          <h2 class="work-title">Чем мы занимаемся</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/work/code.jpg"
+                alt="написание кода за рабочим столом"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/work/mobile.jpg"
+                alt="шаблоны сайта на мобильных телефонах"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/work/circle.jpg"
+                alt="цветовой круг ввиде сот на планшете"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Наша команда-->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/team/igor.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-player">Игорь Демьяненко</h3>
-            <p class="team-position" lang="en">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/olga.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-player">Ольга Репина</h3>
-            <p class="team-position" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team//nicholas.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-player">Николай Тарасов</h3>
-            <p class="team-position" lang="en">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team/michael.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-player">Михаил Ермаков</h3>
-            <p class="team-position" lang="en">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/igor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="team-container">
+                <h3 class="team-player">Игорь Демьяненко</h3>
+                <p class="team-position" lang="en">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/olga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-player">Ольга Репина</h3>
+              <p class="team-position" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team//nicholas.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-player">Николай Тарасов</h3>
+              <p class="team-position" lang="en">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/team/michael.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-player">Михаил Ермаков</h3>
+              <p class="team-position" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Подвал страницы-->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-style">Web</span>Studio</a
-      >
-      <address class="address-map">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="address-list list">
-        <li class="address-item">
-          <a class="address-mail link" href="mailto:info@example.com"
-            >info@example.com</a
-          >
-        </li>
-        <li class="address-item">
-          <a class="address-tel link" href="tel:+380991111111"
-            >+38 099 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          ><span class="footer-logo-style">Web</span>Studio</a
+        >
+        <address class="address-map">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-mail link" href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a class="address-tel link" href="tel:+380991111111"
+              >+38 099 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
