--- a/portfolio.html
+++ b/portfolio.html
@@ -6,50 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+  
   <body>
-    <!--навигация по страницам-->
-    <header class="header">
-      <nav class="navigation">
-        <a class="logo link" href="./index.html"
-          ><span class="logo-style">Web</span>Studio</a
-        >
-        <ul class="menu list">
-          <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Студия</a>
+    <header class="header box">
+      <!--навигация по страницам-->
+      <div class="container header-container">
+        <nav class="navigation">
+          <a class="logo link" href="./index.html"><span class="logo-style">Web</span>Studio</a>
+          <ul class="menu list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link current" href="#">Портфолио</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-list list">
+          <li class="contat-item">
+            <a class="contact-us link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="menu-item">
-            <a class="menu-link link current" href="#">Портфолио</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link link" href="#">Контакты</a>
+          <li>
+            <a class="contact-us link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="contact-list list">
-        <li>
-          <a class="contact-us link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-us link" href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
+
     <!-- <h1>Портфолио</h1> -->
     <main>
-      <section class="filter">
+      <section class="filter section">
+        <div class="container">
         <!-- <h2>фильтр<h2> -->
         <ul class="filter-menu list">
           <li class="filter-item">
@@ -78,9 +75,11 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">Технокряк</h3>
               <p class="gallery-text">Веб-сайт</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -90,11 +89,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Постер <span lang="en">Orlean vs Golden Star</span>
               </h3>
               <p class="gallery-text">Дизайн</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -104,11 +105,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Ресторан <span lang="en">Seafood</span>
               </h3>
               <p class="gallery-text">Приложение</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -118,11 +121,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Проект <span lang="en">Prime</span>
               </h3>
               <p class="gallery-text">Маркетинг</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -132,11 +137,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Проект <span lang="en">Boxes</span>
               </h3>
               <p class="gallery-text">Приложение</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -146,11 +153,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle" lang="en">
                 Inspiration has no Borders
               </h3>
               <p class="gallery-text">Веб-сайт</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -160,11 +169,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Издание <span lang="en">Limited Edition</span>
               </h3>
               <p class="gallery-text">Дизайн</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -174,11 +185,13 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle">
                 Проект <span lang="en">LAB</span>
               </h3>
               <p class="gallery-text">Маркетинг</p>
             </a>
+            </div>
           </li>
           <li class="gallery-item">
             <a class="gallery-img link" href="#">
@@ -188,31 +201,30 @@
                 width="370"
                 height="294"
               />
+              <div class="img-text-container">
               <h3 class="gallery-subtitle" lang="en">Growing Business</h3>
               <p class="gallery-text">Приложение</p>
             </a>
+            </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        ><span class="footer-logo-style">Web</span>Studio</a
-      >
-      <address class="address-map">г. Киев, пр-т Леси Украинки, 26</address>
-      <ul class="address-list list">
-        <li>
-          <a class="address-mail link" href="mailto:info@example.com"
-            >info@example.com</a
-          >
-        </li>
-        <li>
-          <a class="address-tel link" href="tel:+380991111111"
-            >+38 099 111 11 11</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"><span class="footer-logo-style">Web</span>Studio</a>
+        <address class="address-map">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="address-list list">
+          <li class="address-item">
+            <a class="address-mail link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="address-item">
+            <a class="address-tel link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
