фиксит описание нашей команды

--- a/index.html
+++ b/index.html
@@ -159,9 +159,11 @@
                 width="270"
                 height="260"
               />
+              <div class="team-container">
               <h3 class="team-player">Ольга Репина</h3>
               <p class="team-position" lang="en">Frontend Developer</p>
-            </li>
+            </div>
+          </li>
             <li class="team-item">
               <img
                 class="team-img"
@@ -170,8 +172,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-container">
               <h3 class="team-player">Николай Тарасов</h3>
               <p class="team-position" lang="en">Marketing</p>
+            </div>
             </li>
             <li class="team-item">
               <img
@@ -181,8 +185,10 @@
                 width="270"
                 height="260"
               />
+              <div class="team-container">
               <h3 class="team-player">Михаил Ермаков</h3>
               <p class="team-position" lang="en">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
